--- a/index.html
+++ b/index.html
@@ -1049,8 +1049,13 @@ main {
     </div>
 
     <nav class="menu">
-      <!-- PCメニュー -->
-    </nav>
+       <a href="#flow">ご利用の流れ</a>
+       <a href="#price">ご利用料金</a> 
+       <a href="#access">アクセス</a> 
+       <a href="#" id="contact-link">お問い合わせ</a> 
+       <!--2025年度は非表示 <a href="#pdf">自己評価</a> --> 
+       <a href="https://www.instagram.com/noir_niigata/" target="_blank" class="insta-link"> Instagram </a> 
+     </nav>
 
   </div>
 
