--- a/index.html
+++ b/index.html
@@ -60,18 +60,23 @@ header {
 }
 
 .header-inner {
- max-width: 1100px;
+  max-width: 1100px;
   margin: 0 auto;
-  padding: 20px 5px; /* ← 上下 右左 */
+  padding: 20px 5px;
   display: flex;
   align-items: center;
-  justify-content: center;
+}
+
+/* ================= PCヘッダー ================= */
+.pc-header {
+  display: flex;
+  justify-content: flex-start; /* 左寄せ */
 }
 
 .logo {
   display: flex;
   align-items: center;
-  gap: 30px; /* ロゴとテキスト間 */
+  gap: 30px;
 }
 
 .logo-img {
@@ -92,28 +97,29 @@ header {
   text-shadow: 0 4px 8px rgba(255,255,255,1);
   white-space: nowrap;
   font-size: clamp(1.1rem, 3vw, 1.8rem);
-  margin-left: 30px; /* ロゴテキストとの間隔 */
-  margin-right: 65px;
+  margin-left: 30px;
+  margin-right: 40px;
 }
 
+/* 右側メニュー（PC） */
 .menu {
   display: flex;
   gap: 20px;
   margin-left: auto;
 }
-  
+
 .menu a {
   color: #fff;
   text-decoration: none;
   font-size: clamp(0.7rem, 2vw, 1rem);
   white-space: nowrap;
-}  
+}
 
 .menu a:hover {
   opacity: 0.7;
 }
 
-/* ハンバーガーボタン（PC非表示） */
+/* ハンバーガー（PC非表示） */
 .menu-toggle {
   display: none;
   font-size: 26px;
@@ -123,47 +129,48 @@ header {
   cursor: pointer;
 }
 
-/* ================= タブレット以下 ================= */
-@media (max-width: 1024px) {
-  .header-inner {
-    justify-content: space-between;
-  }
+/* ================= スマホ専用 ================= */
+.sp-header {
+  display: none;
 }
 
-/* ================= スマホ ================= */
 @media (max-width: 480px) {
+
   header {
     height: auto;
   }
 
-  .header-inner {
+  /* PC非表示 / SP表示 */
+  .pc-header {
+    display: none;
+  }
+
+  .sp-header {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
 
   /* 左：2行タイトル */
-  .logo-text-wrap {
+  .sp-title {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     line-height: 1.2;
-  }
-
-  .logo-text-sub {
-    font-size: 0.8rem;
     color: #fff;
   }
 
-  .logo-text-main {
+  .sp-sub {
+    font-size: 0.8rem;
+  }
+
+  .sp-main {
     font-size: 1rem;
     font-weight: bold;
-    color: #fff;
   }
 
   /* ロゴ */
-  .logo-img-sp {
-    height: 38px;
+  .sp-logo {
+    height: 36px;
     width: auto;
     margin-left: auto;
     margin-right: 8px;
@@ -172,21 +179,21 @@ header {
   /* ハンバーガー */
   .menu-toggle {
     display: block;
-    font-size: 26px;
     margin-left: 10px;
   }
 
-  /* メニュー */
+  /* スマホメニュー */
   .menu {
     position: absolute;
     top: 100%;
     right: 0;
     width: 65%;
     max-width: 260px;
-    background: rgba(169, 169, 169, 0.95);
+    background: rgba(169,169,169,0.95);
     padding: 14px 16px;
     display: none;
     z-index: 999;
+    flex-direction: column;
   }
 
   .menu.show {
@@ -197,40 +204,9 @@ header {
     display: block;
     padding: 10px 0;
     font-size: 1em;
-    color: #fff;
-    text-decoration: none;
   }
 }
-
-/* 初期状態：PC */
-.pc-header { display: flex; }
-.sp-header { display: none; }
-
-/* スマホだけ切替 */
-@media (max-width: 480px) {
-  .pc-header { display: none; }
-  .sp-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-
-  .sp-title {
-    display: flex;
-    flex-direction: column;
-    line-height: 1.2;
-    color: #fff;
-  }
-
-  .sp-sub { font-size: 0.8rem; }
-  .sp-main { font-size: 1rem; font-weight: bold; }
-
-  .sp-logo {
-    height: 36px;
-    margin-left: auto;
-    margin-right: 8px;
-  }
-}
+  
 /* ===============================
    PC用タイトル
 =============================== */
