--- a/index.html
+++ b/index.html
@@ -138,6 +138,12 @@ header {
 
   header {
     height: auto;
+    font-weight: bold;
+    color: #675340;
+    letter-spacing: 0.15em;
+    text-shadow: 0 4px 8px rgba(255,255,255,1);
+    white-space: nowrap;
+    font-size: clamp(1.1rem, 3vw, 1.8rem);
   }
 
   /* PC非表示 / SP表示 */
@@ -170,9 +176,9 @@ header {
 
   /* ロゴ */
   .sp-logo {
-    height: 36px;
+    height: 44px;
     width: auto;
-    margin-left: auto;
+    margin-left: 6px;
     margin-right: 8px;
   }
 
